2008-02-16  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGrid.cs: Clear current items first thing before 
	repopulating subitems.
	* GridEntry.cs: 
	 - Handle null StandardValuesCollection.
	 - Mark as not editable if there is no PropertyDescriptor and
	 if the Converter cannot convert from string.
	[Part of fix for bugs #360666 and #358332]
2008-02-15  Andreia Gaita <avidigal@novell.com>
	[Backport to 1.9]
	* XplatUIX11.cs: If the handle is null when posting a message, use the
	current thread queue to post instead.
	[Fixes #332409]

	* SendKeys.cs: Slight optimization

2008-02-14  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGrid.cs, PropertyGridView.cs:
	Fix multiple scrolling and sizing issues.
	[Fixes bug #359199]

2008-02-12  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGridView.cs: Ensure that drop down editors are shown
	in the WorkingArea of the screen.
	[Fixes bug #359807]

2008-02-12  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* GridEntry.cs: Fail silently when UITypeEditor is missing.
	[Fixes bug #360666]

2008-02-11  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGridView.cs:
	 - Clear the controls in the drop down form after it is hidden.
	 - Fix Width sizing of the dropdown editors to match MSFT.

2008-02-11  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: 
	 - Fix height for drawing the grid entry
	 text value, so that it clips multiline text properly.
	 - Fix unfocusing to match MSFT.
	* PropertyGrid.cs: Do not populate subgriditems unless expandable.
	Fixes a bug where on repopulation after value changed items become
	expandable.
2008-02-08  Jonathan Pobst  <monkey@jpobst.com>
	[Backport to 1.9]
	* Control.cs: Guard against an NRE in ShowFocusCues.
	[Fixes bug #359830]

2008-02-06  Ivan N. Zlatev  <contact@i-nz.net>

	[Backport to 1.9]
	* PropertyGridView.cs: 
	 - Refactor SetValue to allow setting the value